增加验证码，添加图片

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -30,7 +30,7 @@
                type:"GET",
                success:function (name){
                   if(name !== "false"){
-                     $("#usrRName").html("<h4>欢迎<span style='color: red;font-size: 40px'> " + name + " </span>访问：</h4>")
+                     $("#usrRName").html("<h4>欢迎<span style='color: red;font-size: 40px;font-style: italic'> " + name + " </span>访问：</h4>")
                   }
                }
             })
