--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -22,31 +22,36 @@
     <link rel="icon" href="../images/icon.png" type="image/gif"/>
     <!-- Scrollbar Custom CSS -->
     <link rel="stylesheet" href="../css/jquery.mCustomScrollbar.min.css">
+    <script src="../js/captGenerate.js"></script>
     <script src="../js/jquery.js"></script>
     <script>
         $(function () {
-            //判断是否有session
 
             $("#submit").click(function () {
-                $.ajax({
-                    url: "user/login",
-                    type: "POST",
-                    data: {
-                        name: $("#usrName").val(),
-                        password: $("#usrPsw").val(),
-                    },
-                    success: function (result) {
-                        if (result === "success") {
-
-                            $("#status").empty().append("<p style=\"color: forestgreen;font-size: 13px\">&nbsp;&nbsp;&nbsp;&nbsp;登陆成功，欢迎！</p>")
-                            window.location.href = 'index.html';
-                        } else {
-                            $("#status").empty().append("<p style=\"color: red;font-size: 13px\">&nbsp;&nbsp;&nbsp;&nbsp;用户名或密码错误，请重试！</p>")
-                            document.getElementById("usrName").value="";
-                            document.getElementById("usrPsw").value="";
+                if(!validate()){
+                    $("#status").empty().append("<p style=\"color: red;font-size: 13px\">&nbsp;&nbsp;&nbsp;&nbsp;验证码错误！</p>")
+                    createCode();
+                    $("#capCode").empty()
+                }else {
+                    $.ajax({
+                        url: "user/login",
+                        type: "POST",
+                        data: {
+                            name: $("#usrName").val(),
+                            password: $("#usrPsw").val(),
+                        },
+                        success: function (result) {
+                            if (result === "success") {
+                                $("#status").empty().append("<p style=\"color: forestgreen;font-size: 13px\">&nbsp;&nbsp;&nbsp;&nbsp;登陆成功，欢迎！</p>")
+                                window.location.href = 'index.html';
+                            } else {
+                                $("#status").empty().append("<p style=\"color: red;font-size: 13px\">&nbsp;&nbsp;&nbsp;&nbsp;用户名或密码错误，请重试！</p>")
+                                document.getElementById("usrName").value = "";
+                                document.getElementById("usrPsw").value = "";
+                            }
                         }
-                    }
-                })
+                    })
+                }
             })
         })
     </script>
@@ -56,7 +61,7 @@
     <![endif]-->
 
 </head>
-<body>
+<body onload="createCode()">
 <div class="loader_bg">
     <div class="loader"><img src="../images/loading.gif" alt=""/></div>
 </div>
@@ -157,6 +162,17 @@
             <div class="col-lg-12">
                 <input type="password" class="form-control" id="usrPsw" name="password" placeholder="密码"/>
             </div>
+            <div class="col-lg-12 center"></div>
+            <div class="col-lg-12 center"></div>
+            <div class="col-lg-12">
+                <input class="col-lg-4" type="button" id="code" onclick="createCode()" style="width:60px" title='点击更换验证码' />
+                <br>
+                <div class="col-lg-12 center"></div>
+
+                <input type="text" class="form-control" id="capCode" name="capCode" placeholder="验证码"/>
+            </div>
+            <div class="col-lg-12 center"></div>
+
             <div id="status"></div>
             <div class="col-lg-10">
                 <p><a href="register.html" style="color: #adadad;font-size: 13px">还没有账户？点我注册</a></p>
