--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -25,6 +25,7 @@
     <script src="../js/jquery.js"></script>
     <script src="../js/captGenerate.js"></script>
     <script src="../js/register.js"></script>
+    <script src="../js/isLogin.js"></script>
     <!-- Tweaks for older IEs-->
     <!--[if lt IE 9]>
     <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
