导航栏新增区域一览

--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -79,6 +79,7 @@
                                     <div class="dropdown-menu">
                                        <a class="dropdown-item" style="color: black" href="#">区域一览</a>
                                        <a class="dropdown-item" style="color: black" href="#">专家一览</a>
+                                       <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
                                        <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                        <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                     </div>
@@ -96,6 +97,9 @@
                                        <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
                                     </div>
                                  </div>
+                              </li>
+                              <li>
+                                 <a href="#">区域一览</a>
                               </li>
                               <!--登录后隐藏-->
                               <li id="login">
