--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -113,6 +113,9 @@
                                         </div>
                                     </div>
                                 </li>
+                                <li>
+                                    <a href="#">区域一览</a>
+                                </li>
                                 <!--登录后隐藏-->
                                 <li id="login" class="active">
                                     <a href="login.html">登录</a>
