--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -84,6 +84,9 @@
                                         </div>
                                     </div>
                                 </li>
+                                <li>
+                                    <a href="#">区域一览</a>
+                                </li>
                                 <!--登录后隐藏-->
                                 <li id="login" >
                                     <a href="login.html">登录</a>
