--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -40,10 +40,6 @@
             })
          })
       </script>
-      <!-- Tweaks for older IEs-->
-      <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-      <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
    </head>
    <!-- body -->
    <body class="main-layout">
@@ -92,7 +88,7 @@
                                        资料检索
                                     </button>
                                     <div class="dropdown-menu">
-                                       <a class="dropdown-item" style="color: black" href="#">虫害资料</a>
+                                       <a class="dropdown-item" style="color: black" href="bug.html">虫害资料</a>
                                        <a class="dropdown-item" style="color: black" href="#">病害资料</a>
                                        <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
                                     </div>
