--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -28,11 +28,6 @@
     <script src="../js/isLogin.js"></script>
     <script src="../js/login.js"></script>
 
-    <!-- Tweaks for older IEs-->
-    <!--[if lt IE 9]>
-    <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-    <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-    <!--[endif]-->
 </head>
 <body class="main-layout" onload="createCode()">
 <div class="loader_bg">
@@ -66,6 +61,7 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="#">专家一览</a>
+                                            <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">小班管理</a>
                                             <a class="dropdown-item" style="color: black" href="#">事件记录</a>
                                         </div>
@@ -78,7 +74,7 @@
                                             资料检索
                                         </button>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" style="color: black" href="#">虫害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="bug.html">虫害资料</a>
                                             <a class="dropdown-item" style="color: black" href="#">病害资料</a>
                                             <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
                                         </div>
