添加虫害、病害分页

--- a/src/main/resources/static/html/sickness.html
+++ b/src/main/resources/static/html/sickness.html
@@ -42,14 +42,13 @@
     <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table-zh-CN.js"></script>
-    <script src="../js/bug.js"></script>
+    <script src="../js/sickness.js"></script>
 </head>
-<!-- body -->
-<body class="main-layout" onload="createCode()">
-<!-- loader  -->
+
+<!--<body onload="createCode()">
 <div class="loader_bg">
     <div class="loader"><img src="../images/loading.gif" alt=""/></div>
-</div>
+</div>-->
 <!-- end loader -->
 <!-- header -->
 <header>
@@ -122,14 +121,12 @@
     </div>
     <!-- end header inner -->
 </header>
-
-
 <div class="Marketing-bg">
     <div class="container">
         <div class="row">
             <div class="col-md-12">
                 <div class="Marketingheading">
-                    <h3>虫害管理</h3>
+                    <h3>病害管理</h3>
                 </div>
             </div>
         </div>
