--- a/src/main/resources/static/html/login.html
+++ b/src/main/resources/static/html/login.html
@@ -152,7 +152,7 @@
             <div class="col-lg-10 mycheckbox checkbox"></div>
             <div class="col-lg-10"></div>
             <div class="col-lg-10">
-                <button type="button" id="submit" class="btn btn-success col-lg-12">登录</button>
+                <button type="button" id="submit" class="btn btn-success col-lg-12" style="margin-left:10%">登录</button>
             </div>
         </div>
     </div>
