--- a/src/main/resources/static/html/log.html
+++ b/src/main/resources/static/html/log.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="zh" xmlns="http://www.w3.org/1999/html">
 <head>
     <!-- basic -->
     <meta charset="utf-8">
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>虫害管理 CPPMS</title>
+    <title>日志管理 CPPMS</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -42,8 +42,9 @@
     <script src="../bootstrap-3.3.7-dist/js/bootstrap.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table-zh-CN.js"></script>
-    <script src="../js/bug.js"></script>
+    <script src="../js/log.js"></script>
     <script src="../js/isLogin.js"></script>
+
 </head>
 <!-- body -->
 <body class="main-layout" onload="createCode()">
@@ -60,7 +61,7 @@
             <div class="col-lg-3 logo_section">
                 <div class="full">
                     <div class="center-desk">
-                        <div class="logo"> <a href="index.html"><img src="../images/logo.png" alt="#"></a> </div>
+                        <div class="logo"><a href="index.html"><img src="../images/logo.png" alt="#"></a></div>
                     </div>
                 </div>
             </div>
@@ -74,7 +75,8 @@
                                 </li>
                                 <li>
                                     <div class="dropdown">
-                                        <button type="button" id="btn1" class="btn dropdown-toggle" data-toggle="dropdown">
+                                        <button type="button" id="btn1" class="btn dropdown-toggle"
+                                                data-toggle="dropdown">
                                             灾情防治
                                         </button>
                                         <div class="dropdown-menu">
@@ -88,10 +90,11 @@
                                 <li>
                                     <!--虫/鼠害...害信息查询-->
                                     <div class="dropdown">
-                                        <button type="button" id="btn2" class="btn dropdown-toggle" data-toggle="dropdown">
+                                        <button type="button" id="btn2" class="btn dropdown-toggle"
+                                                data-toggle="dropdown">
                                             资料检索
                                         </button>
-                                        <div class="dropdown-menu active">
+                                        <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="bug.html">虫害资料</a>
                                             <a class="dropdown-item" style="color: black" href="#">病害资料</a>
                                             <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
@@ -99,7 +102,7 @@
                                     </div>
                                 </li>
                                 <!--登录后隐藏-->
-                                <li id="login" >
+                                <li id="login">
                                     <a href="login.html">登录</a>
                                 </li>
                                 <!--登录后隐藏-->
@@ -130,7 +133,7 @@
         <div class="row">
             <div class="col-md-12">
                 <div class="Marketingheading">
-                    <h3>虫害管理</h3>
+                    <h3>日志管理</h3>
                 </div>
             </div>
         </div>
@@ -141,7 +144,28 @@
 <!-- end section -->
 <!-- section -->
 
+<div class="container">
+    <div class="form-group">
+        <br>
+        <label class="date-label">日期：</label>
+        <div class="date-container">
+            <i class="fa fa-calendar date-icon"></i>
+            <input type="text" id="startData" class="form-control date-input" placeholder="开始日期">
+        </div>
 
-<table id="mytable"></table>
+    </div>
+    <div class="form-group">
+        <label class="date-label">--</label>
+        <div class="date-container">
+            <i class="fa fa-calendar date-icon"></i>
+            <input type="text" id="endData" class="form-control date-input" placeholder="结束日期">
+        </div>
+    </div>
+
+    <button onclick="searchedTable($('#startData').val(),$('#endData').val())" type="button" id="submit" class="btn">查询</button>
+
+    <table id="mytable"></table>
+
+</div>
 </body>
 </html>
