--- a/src/main/resources/static/html/register.html
+++ b/src/main/resources/static/html/register.html
@@ -160,7 +160,7 @@
             <div class="col-lg-10 mycheckbox checkbox"></div>
             <div class="col-lg-10"></div>
             <div class="col-lg-10">
-                <button type="button" id="btn3" class="btn btn-success col-lg-12">注册</button>
+                <button type="button" id="btn3" class="btn btn-success col-lg-12" style="margin-left:10%">注册</button>
             </div>
         </div>
     </div>
